SP2-2436: Additional CSS styling to prevent borders extending into white space when a goal enacts text wrapping.

--- a/server/forms/sentence-plan/components/goal-summary-card/_goal-summary-card.scss
+++ b/server/forms/sentence-plan/components/goal-summary-card/_goal-summary-card.scss
@@ -9,6 +9,7 @@
   .govuk-summary-card__actions {
     flex-wrap: nowrap;
     white-space: nowrap;
+    height: fit-content;
   }
 
   // Prevent links from turning purple when visited
